using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class McOption : MonoBehaviour
{
    public McVideos videos;
    public McControls controls;
    public McSounds sounds;
}
